@@ -785,8 +785,39 @@ class PrefsConf:
       # --
       self.remove_option('Preferences', 'DontShowMe_NetConnectUnresponsive')
     # just do stuff below
-    if oldVersion in ['1.43.2rc1', '1.43.2rc2', '1.43.2rc3', '1.43.2', '1.43.3rc1', '1.43.3rc2', '1.43.3rc3'] or fromHereUp == True:
+    if oldVersion in ['1.43.2rc1', '1.43.2rc2', '1.43.2rc3', '1.43.2', '1.43.3rc1',
+                      '1.43.3rc2', '1.43.3rc3', '1.43.3rc4'] or fromHereUp == True:
       fromHereUp = True
+    if oldVersion == '1.43.3rc5' or fromHereUp == True:
+      fromHereUp = True
+      # In 1.43.3rc5 we added an "# autogenerated" comment to any of the crontab
+      # entries fwbackups generates to distinguish them. This removes any
+      # fwbackups-related entries for the last time so that new entries can be
+      # generated with the comment.
+      #
+      # This allows us to remove only entries specificially generated by
+      # fwbackups, and keep entries with "fwbackups-run" that we did not
+      # generate.
+      from fwbackups import cron
+      cleanedLines = []
+      # Read the existing crontab
+      crontabLines = cron.read()
+      # Parse each line and skip any fwbackup-related ones
+      cleanedLines = []
+      for line in crontabLines:
+        if line.is_comment_or_whitespace():
+          # Never clean out comments or whitespace
+          cleanedLines.append(line)
+        else:
+          # if not comment or whitespace, check if the entry is not fwbackups related
+          if line.get_raw_entry_text().find('fwbackups-run') == -1:
+            cleanedLines.append(line)
+      try: # write cleaned lines
+        cron.write(cleanedLines)
+      except: # write backup
+        cron.write(crontabLines)
+        raise ConfigError(_("Unable to clean user crontab!"))
+      
     self.__config.set("General", "Version", fwbackups.__version__)
     return True
 
