@@ -56,9 +56,11 @@ LOGLOC = os.path.join(LOC, 'fwbackups-userlog.txt') # The location to store the 
 
 try: # because Windows doesn't do exit codes properly...
   EXIT_STATUS_OK = os.EX_OK
-except: #... we need this thing.
+except AttributeError: #... we need this thing.
   EXIT_STATUS_OK = 0
-  
+
+CRON_SIGNATURE = "# autogenerated by fwbackups"
+
 def ConvertPath(path):
   """Makes a path portable."""
   if MSWINDOWS and path[1:3] != ':\\':
