@@ -7,6 +7,9 @@
       comments and variables such as "   HOME=/foobar   # foobar  spaces"
     - Backup the crontab before making any modifications and restore the
       original in the event of an error
+    - Add a signature to crontab entries generated by fwbackups, enabling
+      the cleaner to distinguish between generated entries and fwbackups-run
+      entries added by the user.
   
   * Wed Jul 7 2010 Stewart Adam <s.adam at diffingo.com>
     - Fix a problem where all tokens values would be wrapped in square brackets
